v1 tag wrapping fix

--- a/static/src/stylesheets/module/content/_content.scss
+++ b/static/src/stylesheets/module/content/_content.scss
@@ -154,6 +154,12 @@
     }
 }
 
+.content__labels--long {
+    .content__section-label__link {
+        @include fs-header(2);
+    }
+}
+
 .content__series-label {
     @include fs-headline(2);
     float: left;
